--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,6 +128,77 @@ a {
   }
 }
 
+@media only screen and (min-width: 968px) and (max-width: 1100px) {
+  .expertise-image {
+    width: 100% !important;
+  }
+  .expertise-image-wrapper {
+    width: 100% !important;
+    margin-left: -25% !important;
+    padding-top: 140px !important;
+  }
+  .why-choose-us > .content-wrapper {
+    width: 100% !important;
+    display: block !important;
+  }
+  .content-wrapper > .title {
+    font: 700 100px / 1 "Clash Display Variable", -apple-system, Roboto,
+      Helvetica, sans-serif !important;
+    text-align: center !important;
+  }
+  .contact-container.jsx-7e7acda10bc6b20d {
+    margin: 0 auto !important;
+  }
+  .article-card {
+    min-width: 100% !important;
+    width: 100% !important;
+  }
+  .article-title {
+    /* font: 600 40px / 50px Sora, sans-serif !important; */
+  }
+  .content-image {
+    max-width: 100% !important;
+    min-width: 100% !important;
+  }
+  .container2 {
+    padding: 60px 70px 90px 70px !important;
+  }
+  .container2 > .content-wrapper {
+    padding: 60px 0px 20px 0px !important;
+  }
+  .container2 > .footer {
+    margin-top: 0px !important;
+  }
+  .expertise-cards {
+    margin-top: 80% !important;
+  }
+  .expertise-content.jsx-b7f57c96c8aadf6a {
+    width: 80% !important;
+  }
+  header {
+    z-index: 999;
+    position: relative;
+  }
+  .nav-list {
+    display: none !important;
+  }
+
+  .topnav {
+    overflow: visible !important;
+    background-color: #f34d02 !important;
+    position: relative !important;
+    z-index: 999 !important;
+    top: 30% !important;
+    position: absolute !important;
+    float: right !important;
+    right: 5% !important;
+  }
+
+  .mask > img {
+    height: 50vh !important;
+  }
+}
+
 @media screen and (max-width: 967px) {
   .copyright.jsx-a674865a2c66177d {
     margin: auto 0 !important;
@@ -346,7 +417,8 @@ a {
   }
 
   .Button-txt {
-    font-size: 16px !important;
+    font-size: 14px !important;
+    padding: 10px !important;
   }
 
   .sub-title {
