--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,13 +122,16 @@ a {
   position: absolute;
 }
 
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 1101px) {
   .topnav #myLinks {
     display: none !important;
   }
 }
 
 @media only screen and (min-width: 968px) and (max-width: 1100px) {
+  .div-888 {
+    width: 87% !important;
+  }
   .expertise-image {
     width: 100% !important;
   }
@@ -170,7 +173,8 @@ a {
     margin-top: 0px !important;
   }
   .expertise-cards {
-    margin-top: 80% !important;
+    margin-top: 160% !important;
+    width: 550px !important;
   }
   .expertise-content.jsx-b7f57c96c8aadf6a {
     width: 80% !important;
@@ -199,7 +203,59 @@ a {
   }
 }
 
+/* Solution section` */
+@media only screen and (min-width: 200px) and (max-width: 450px) {
+  .expertise-cards {
+    margin-top: 5% !important;
+    position: absolute !important;
+    width: 80% !important;
+    padding: 0 0px !important;
+    margin-left: -10% !important;
+  }
+}
+
+@media only screen and (min-width: 451px) and (max-width: 767px) {
+  .expertise-cards {
+    margin-top: 5% !important;
+    position: absolute !important;
+    width: 80% !important;
+    padding: 0 0px !important;
+    margin-left: 0% !important;
+  }
+  .strategic-expertise.jsx-c9245d556bc126b8 {
+    max-width: 100%;
+    padding: 32px 18px 60px 18px !important;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 967px) {
+  .expertise-cards {
+    margin-top: 5% !important;
+    position: absolute !important;
+    width: 80% !important;
+    padding: 0 0px !important;
+    margin-left: 0% !important;
+  }
+  .strategic-expertise {
+    max-width: 100%;
+    padding: 32px 30px 60px 30px !important;
+  }
+  .sustainability-section.jsx-bac73623a21c2552 {
+    width: 100% !important;
+    padding: 15px 25px !important;
+  }
+  .why-choose-us > .content-wrapper > h2 {
+    padding-left: 30px !important;
+  }
+}
+
 @media screen and (max-width: 967px) {
+  .expertise-image {
+    display: none !important;
+  }
+  .strategic-expertise {
+    margin-top: 0px !important;
+  }
   .copyright.jsx-a674865a2c66177d {
     margin: auto 0 !important;
     width: 100% !important;
@@ -325,14 +381,6 @@ a {
     background: #111111 !important;
   }
 
-  .expertise-cards {
-    margin-top: 50% !important;
-    position: absolute !important;
-    width: 80% !important;
-    padding: 25px !important;
-    margin-left: -10% !important;
-  }
-
   .feature-card {
     margin-top: 18% !important;
     padding: 25px !important;
@@ -355,8 +403,8 @@ a {
   }
 
   .sustainability-section {
-    padding: 25px !important;
-    margin-top: -20% !important;
+    padding: 0px 6px !important;
+    margin-top: -13% !important;
   }
 
   .expertise-image {
@@ -369,7 +417,7 @@ a {
   }
 
   .expertise-image-wrapper {
-    height: 80vh !important;
+    height: 280px !important;
   }
 
   .content-wrapper {
